2015-07-01  Stipe Tolj  <stolj at kannel.org>
    * doc/userguide/userguide.xml: add documentation for escape code %N for DLR
      notification text.
    * gw/bb_alog.c: implement %N escape code for 'access-log-format' pattern.
    
2015-06-24 Alexander Malysh <amalysh at kannel.org>
    * configure.in, configure: fixed library search path order issue on OSX with
      MacPorts installed where iconv library was not found for linking.

2015-06-24 Alexander Malysh <amalysh at kannel.org>
    * utils/mtbatch.1: fixed bad formatting. This fixes #728.
      Thanks to Kalle Niemitalo. 

2015-05-18  Stipe Tolj  <stolj at kannel.org>
    * gw/smsc/smsc_smpp.c: harmonize the [data|deliver]_sm handling where we
      don't find a DLR in our storage. Make sure we log a FAILED event in the
      access-log for both PDU types.
      
2015-05-17  Stipe Tolj  <stolj at kannel.org>
    * gw/bb_boxc.c: ensure we get a wakeup call while being in gwthread_sleep()
      in sms_to_smsboxes(), which reduces the shutdown waiting time. Ensure
      we don't re-loop if we're in shutdown phase.
    * gw/bearerbox.c: issue gwthread_wakeup_all() after bb_shutdown() in order
      to wakeup all pending sleepers.
    [Msg-Id: <55364459.7030503@kannel.org>]
      
2015-03-19  Stipe Tolj  <stolj at kannel.org>
    * gw/bb_store_redis.c: fix memory leak when the result set is empty, we still
      get a single row entry from the redis side, which needs to be destroyed.
      
2015-03-18  Stipe Tolj  <stolj at kannel.org>
    * config.guess: update to latest version to support various more platforms.
      [http://savannah.gnu.org/projects/config]
      
2015-03-12 Alexander Malysh <amalysh at kannel.org>
    * Makefile.in: fixed make invocation for subfolders

2015-03-12 Alexander Malysh <amalysh at kannel.org>
    * Makefile.in: addeed possibility to easy add subdirectories to build process

2015-03-12 Alexander Malysh <amalysh at kannel.org>