@@ -158,7 +158,7 @@ static void store_redis_delete(Octstr *id)
 }
 
 
-struct store_db_fields *store_db_fields_create(CfgGroup *grp)
+static struct store_db_fields *store_db_fields_create(CfgGroup *grp)
 {
     struct store_db_fields *ret;
 
@@ -175,7 +175,7 @@ struct store_db_fields *store_db_fields_create(CfgGroup *grp)
 }
 
 
-void store_db_fields_destroy(struct store_db_fields *fields)
+static void store_db_fields_destroy(struct store_db_fields *fields)
 {
     /* sanity check */
     if (fields == NULL)
@@ -246,100 +246,38 @@ static int store_redis_getall(int ignore_err, void(*cb)(Octstr*, void*), void *d
 
 
 struct status {
-    const char *format;
-    Octstr *status;
+    void(*callback_fn)(Msg* msg, void *data);
+    void *data;
 };
+
 
 static void status_cb(Octstr *msg_s, void *d)
 {
     struct status *data = d;
-    struct tm tm;
-    char id[UUID_STR_LEN + 1];
     Msg *msg;
 
     msg = store_msg_unpack(msg_s);
-
     if (msg == NULL)
         return;
-    /* transform the time value */
-#if LOG_TIMESTAMP_LOCALTIME
-    tm = gw_localtime(msg->sms.time);
-#else
-    tm = gw_gmtime(msg->sms.time);
-#endif
-    if (msg->sms.udhdata)
-        octstr_binary_to_hex(msg->sms.udhdata, 1);
-    if (msg->sms.msgdata &&
-        (msg->sms.coding == DC_8BIT || msg->sms.coding == DC_UCS2 ||
-        (msg->sms.coding == DC_UNDEF && msg->sms.udhdata)))
-        octstr_binary_to_hex(msg->sms.msgdata, 1);
 
-    uuid_unparse(msg->sms.id, id);
-
-    octstr_format_append(data->status, data->format,
-        id,
-        (msg->sms.sms_type == mo ? "MO" :
-        msg->sms.sms_type == mt_push ? "MT-PUSH" :
-        msg->sms.sms_type == mt_reply ? "MT-REPLY" :
-        msg->sms.sms_type == report_mo ? "DLR-MO" :
-        msg->sms.sms_type == report_mt ? "DLR-MT" : ""),
-        tm.tm_year + 1900, tm.tm_mon + 1, tm.tm_mday,
-        tm.tm_hour, tm.tm_min, tm.tm_sec,
-        (msg->sms.sender ? octstr_get_cstr(msg->sms.sender) : ""),
-        (msg->sms.receiver ? octstr_get_cstr(msg->sms.receiver) : ""),
-        (msg->sms.smsc_id ? octstr_get_cstr(msg->sms.smsc_id) : ""),
-        (msg->sms.boxc_id ? octstr_get_cstr(msg->sms.boxc_id) : ""),
-        (msg->sms.udhdata ? octstr_get_cstr(msg->sms.udhdata) : ""),
-        (msg->sms.msgdata ? octstr_get_cstr(msg->sms.msgdata) : ""));
+    data->callback_fn(msg, data->data);
 
     msg_destroy(msg);
 }
 
-static Octstr *store_redis_status(int status_type)
+
+static void store_redis_for_each_message(void(*callback_fn)(Msg* msg, void *data), void *data)
 {
-    Octstr *ret = octstr_create("");
-    const char *format;
-    struct status data;
+    struct status d;
 
-    /* check if we are active */
     if (pool == NULL)
-        return ret;
+        return;
 
-    /* set the type based header */
-    if (status_type == BBSTATUS_HTML) {
-        octstr_append_cstr(ret, "<table border=1>\n"
-            "<tr><td>SMS ID</td><td>Type</td><td>Time</td><td>Sender</td><td>Receiver</td>"
-            "<td>SMSC ID</td><td>BOX ID</td><td>UDH</td><td>Message</td>"
-            "</tr>\n");
+    d.callback_fn = callback_fn;
+    d.data = data;
 
-        format = "<tr><td>%s</td><td>%s</td>"
-                "<td>%04d-%02d-%02d %02d:%02d:%02d</td>"
-                "<td>%s</td><td>%s</td><td>%s</td>"
-                "<td>%s</td><td>%s</td><td>%s</td></tr>\n";
-    } else if (status_type == BBSTATUS_XML) {
-        format = "<message>\n\t<id>%s</id>\n\t<type>%s</type>\n\t"
-                "<time>%04d-%02d-%02d %02d:%02d:%02d</time>\n\t"
-                "<sender>%s</sender>\n\t"
-                "<receiver>%s</receiver>\n\t<smsc-id>%s</smsc-id>\n\t"
-                "<box-id>%s</box-id>\n\t"
-                "<udh-data>%s</udh-data>\n\t<msg-data>%s</msg-data>\n\t"
-                "</message>\n";
-    } else {
-        octstr_append_cstr(ret, "[SMS ID] [Type] [Time] [Sender] [Receiver] [SMSC ID] [BOX ID] [UDH] [Message]\n");
-        format = "[%s] [%s] [%04d-%02d-%02d %02d:%02d:%02d] [%s] [%s] [%s] [%s] [%s] [%s]\n";
-    }
-
-    data.format = format;
-    data.status = ret;
     /* ignore error because files may disappear */
-    store_redis_getall(1, status_cb, &data);
-
-    /* set the type based footer */
-    if (status_type == BBSTATUS_HTML) {
-        octstr_append_cstr(ret,"</table>");
-    }
-
-    return ret;
+    store_redis_getall(1, status_cb, &d);
 }
 
 
@@ -477,7 +415,7 @@ int store_redis_init(Cfg *cfg)
     store_load = store_redis_load;
     store_dump = store_redis_dump;
     store_shutdown = store_redis_shutdown;
-    store_status = store_redis_status;
+    store_for_each_message = store_redis_for_each_message;
 
     /*
      * Check for all mandatory directives that specify the field names
